Post-v2.10.0
---------------------
   - The environment variable OVS_SYSLOG_METHOD, if set, is now used
     as the default syslog method.
   - The environment variable OVS_CTL_TIMEOUT, if set, is now used
     as the default timeout for control utilities.
   - ovn:
     * ovn-ctl: allow passing user:group ids to the OVN daemons.


v2.10.0 - xx xxx xxxx
---------------------
   - ovs-vswitchd and utilities now support DNS names in OpenFlow and
     OVSDB remotes.
   - ovs-vswitchd:
     * New options --l7 and --l7-len to "ofproto/trace" command.
     * Previous versions gave OpenFlow tables default names of the form
       "table#".  These are not helpful names for the purpose of accepting
       and displaying table names, so now tables by default have no names.
     * The "null" interface type, deprecated since 2013, has been removed.
     * Add minimum network namespace support for Linux.
     * New command "lacp/show-stats"
   - ovs-ofctl:
     * ovs-ofctl now accepts and display table names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
   - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".
   - ovs-dpctl:
     * New commands "ct-set-limits", "ct-del-limits", and "ct-get-limits".
   - OpenFlow:
     * OFPT_ROLE_STATUS is now available in OpenFlow 1.3.
     * OpenFlow 1.5 extensible statistics (OXS) now implemented.
     * New OpenFlow 1.0 extensions for group support.
     * Default selection method for select groups is now dp_hash with improved
       accuracy.
   - Linux datapath
     * Add support for compiling OVS with the latest Linux 4.14 kernel.
     * Added support for meters.
     * Add support for conntrack zone limit.
   - ovn:
     * Implemented icmp4/icmp6/tcp_reset actions in order to drop the packet
       and reply with a RST for TCP or ICMPv4/ICMPv6 unreachable message for